Removed 4k recording module (#1129)
